--- a/node-red/config.json
+++ b/node-red/config.json
@@ -10,7 +10,7 @@
   "panel_icon": "mdi:sitemap",
   "startup": "application",
   "init": false,
-  "homeassistant": "0.92.0b2",
+  "homeassistant": "0.3.0",
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
   "ports": {
     "80/tcp": 1880
